--- a/.github/workflows/puppeteer-cron.yml
+++ b/.github/workflows/puppeteer-cron.yml
@@ -1,22 +1,24 @@
-name: Run Puppeteer Daily
+name: Test Puppeteer Automation
 
 on:
   schedule:
-    - cron: '53 5 * * *'  # Adjust UTC time
-  workflow_dispatch:
+    - cron: '53 5 * * *'  # Runs daily at 11:53 AM Bangladesh time (UTC+6)
+  workflow_dispatch:        # Allows manual trigger from GitHub UI
 
 jobs:
   run-puppeteer:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
 
-      - name: Setup Node
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
 
-      - name: Install Dependencies
+      - name: Install Puppeteer
         run: npm install puppeteer
 
       - name: Run Puppeteer Script
