--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "automation": "node e2e-script.js"
   },
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "@google/genai": "^1.11.0"
+    "@google/genai": "^1.11.0",
+    "puppeteer-core": "^22.13.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "typescript": "~5.7.2",
-    "vite": "^6.2.0",
-    "puppeteer": "^22.13.0"
+    "vite": "^6.2.0"
   }
 }
