--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "@google/genai": "^1.11.0",
+    "puppeteer": "^22.13.0",
     "puppeteer-core": "^22.13.0"
   },
   "devDependencies": {
